--- a/index.html
+++ b/index.html
@@ -11,15 +11,8 @@
 <meta charset="UTF-8">
     
 <title>Barbearia Alura</title>
-    
+<link rel="stylesheet" href="style.css">  
 <style>
-   p{
-
-    text-align:center 
-   }
-   h1{text-align: center
-
-   }
 
 </style>
 
