--- a/index.html
+++ b/index.html
@@ -36,5 +36,7 @@
 <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
     
 </body>
+
+<img id="banner" src="banner.jpg">
     
 </html>
